--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,14 +3,20 @@
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Astro</title>
+  </head>
+  <body>
+    <h1>Mi sitio Astro</h1>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati
+      expedita, unde a ullam earum mollitia, consequatur natus ex sequi beatae
+      perspiciatis placeat quasi eum suscipit reprehenderit aut sed cupiditate
+      asperiores.
+    </p>
+  </body>
 </html>
