--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,9 @@
 ---
+import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = 'Sobre mi';
 
 const identity = {
-  firstName: 'MIlthon Hidalgo',
+  firstName: 'Milthon Hidalgo',
   country: 'Chile',
   occupation: 'Escritor técnico',
   hobbies: ['fotografia', 'observación de aves', 'peñarol'],
@@ -20,61 +21,52 @@ const skills = [
 const happy = true;
 const finished = false;
 const goal = 3;
+
+const skillColor = 'navy';
+const fontWeight = 'bold';
+const textCase = 'uppercase';
 ---
 
-<html lang="es">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
-  </head>
-  <body>
-    <a href="/">Inicio</a>
-    <a href="/about">Sobre mi</a>
-    <a href="/blog/">Blog</a>
+<BaseLayout pageTitle={pageTitle}>
+  <h2>... ¡y mi nuevo sitio Astro!</h2>
 
-    <h1>{pageTitle}</h1>
-    <h2>... ¡y mi nuevo sitio Astro!</h2>
+  <p>
+    Estoy trabajando en el tutorial introductorio de Astro. Esta es la segunda
+    página de mi sitio web, ¡y es la primera que he construido yo mismo!
+  </p>
 
-    <p>
-      Estoy trabajando en el tutorial introductorio de Astro. Esta es la segunda
-      página de mi sitio web, ¡y es la primera que he construido yo mismo!
-    </p>
+  <p>
+    Este sitio se irá actualizando a medida que vaya completando más partes del
+    tutorial, ¡así que no dejes de visitarlo para ver cómo va mi viaje!
+  </p>
 
-    <p>
-      Este sitio se irá actualizando a medida que vaya completando más partes
-      del tutorial, ¡así que no dejes de visitarlo para ver cómo va mi viaje!
-    </p>
+  <p>He aquí algunos datos sobre mi</p>
 
-    <p>He aquí algunos datos sobre mi</p>
+  {happy && <p>Estoy feliz de aprender Astro</p>}
+  {finished && <p>Ya he terminado el tutorial de Astro!</p>}
 
-    {happy && <p>Estoy feliz de aprender Astro</p>}
-    {finished && <p>Ya he terminado el tutorial de Astro!</p>}
+  <!-- {
+    goal === 3 ? (
+      <p>Mi objetivo es terminar en 3 días</p>
+    ) : (
+      <p>Mi objetivo no son 3 días</p>
+    )
+  } -->
+
+  <ul>
+    <li>Me llamo {identity.firstName}.</li>
+    <li>Vivo en {identity.country} y trabajo como {identity.occupation}.</li>
     {
-      goal === 3 ? (
-        <p>Mi objetivo es terminar en 3 días</p>
-      ) : (
-        <p>Mi objetivo no son 3 días</p>
+      identity.hobbies.length >= 2 && (
+        <li>
+          Dos de mis aficiones son: {identity.hobbies[0]} y{' '}
+          {identity.hobbies[1]}
+        </li>
       )
     }
-
-    <ul>
-      <li>Me llamo {identity.firstName}.</li>
-      <li>Vivo en {identity.country} y trabajo como {identity.occupation}.</li>
-      {
-        identity.hobbies.length >= 2 && (
-          <li>
-            Dos de mis aficiones son: {identity.hobbies[0]} y{' '}
-            {identity.hobbies[1]}
-          </li>
-        )
-      }
-    </ul>
-    <p>Mis habilidades son:</p>
-    <ul>
-      {skills.map((skill) => <li>{skill}</li>)}
-    </ul>
-  </body>
-</html>
+  </ul>
+  <p>Mis habilidades son:</p>
+  <ul>
+    {skills.map((skill) => <li class="skill">{skill}</li>)}
+  </ul>
+</BaseLayout>
