--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -7,4 +7,5 @@
   <a href="/about/">Sobre mi</a>
   <a href="/blog/">Blog</a>
   <a href="/tags/">Tags</a>
+  <a href="/launches/">Launches</a>
 </div>
